# sonnaik

./: README.md
backend/: pyproject.toml
backend/src/: main.py
backend/src/ai/: models.py  ollama_ai.py  router.py
backend/src/ai/stt/: test.py
backend/src/ai/tts/: accentizer.py  backend.py  models.py
backend/src/api/: router.py  security.py
backend/src/authorization/: backend.py  models.py  router.py
backend/src/core/: config.py
backend/src/db/: backend.py  db.py  models.py  router.py
backend/src/messages/: models.py  router.py
frontend2/: index.html  package-lock.json  package.json  tailwind.config.js
frontend2/src/: App.jsx
frontend2/src/api/: callOllamaStream.js
frontend2/src/components/: ChatArea.jsx  ChatList.jsx  InputPanel.jsx  LoginForm.jsx  LogoMoon.jsx  Message.jsx
frontend2/src/contexts/: AuthContext.jsx
frontend2/src/data/: mockData.js
frontend2/src/hooks/: useAuth.js  useChat.js  useChatStorage.js
frontend2/src/pages/: MainPage.jsx
frontend2/src/styles/: index.css
